Fixed certain alignment issues

--- a/components/Inventory/Stock.scss
+++ b/components/Inventory/Stock.scss
@@ -103,6 +103,9 @@
         .width_60_input {
           width: 60% !important;
         }
+        .select_multiple {
+          height: 100px !important;
+        }
         .form_float_left {
           float: left;
         }
