--- a/components/Inventory/TopHeader.scss
+++ b/components/Inventory/TopHeader.scss
@@ -8,7 +8,7 @@
     float: left;
     .nav_inner_div {
       padding-left: 20px;
-      padding-top: 8px;
+      padding-top: 10px;
       span {
         cursor: pointer;
       }
